Introduce fragment handler component
Code is extremely crude and it only handles fragmentation and
reconstruction without taking into account acks, which means any
packet loss will break it :) But it's a good start...

--- a/hydra-node/hydra-node.cabal
+++ b/hydra-node/hydra-node.cabal
@@ -84,6 +84,7 @@ library
     Hydra.Logging.Monitoring
     Hydra.Network
     Hydra.Network.Authenticate
+    Hydra.Network.Fragment
     Hydra.Network.Heartbeat
     Hydra.Network.Message
     Hydra.Network.Ouroboros
@@ -279,6 +280,7 @@ test-suite tests
     Hydra.Model.Payment
     Hydra.ModelSpec
     Hydra.Network.AuthenticateSpec
+    Hydra.Network.FragmentSpec
     Hydra.Network.HeartbeatSpec
     Hydra.Network.ReliabilitySpec
     Hydra.Network.UDPSpec
